Tweaked ladder details card's z-index (which will hopefully fix the flickering in safari).

--- a/static/css/ladder.css
+++ b/static/css/ladder.css
@@ -18,7 +18,7 @@
 	text-shadow: 0 2px 2px #000;
 	box-shadow: 0 2px 8px #000;
 	opacity: 0.9;
-	z-index: 1;
+	z-index: 3;
 	font-size: min(4vw, 16px);
 }
 
